--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    background-color: #1c1c1c;
+    min-height: 100vh;
+    height: fit-content;
+    width: 100%;
+
+    max-width: none !important;
+    margin: 0 0 !important;
+}
